--- a/Index/.htaccess
+++ b/Index/.htaccess
@@ -6,7 +6,7 @@ Options +FollowSymLinks
 ## Turn on the rewrite engine
 RewriteEngine on
 
-RewriteBase \
+# RewriteBase \
 
 ## Let the other htaccess do its thing
 
@@ -27,7 +27,7 @@ RewriteCond %{THE_REQUEST} \s/+(.+?)\.php[\s?] [NC]
 RewriteRule ^ /%1 [R=301,NE,L]
 
 ## Set the default directory index page order
-DirectoryIndex index.php camping.php Home.php 500.php
+DirectoryIndex index.php Projects.php camping.php Home.php 500.php
 
 ## Forbid access to .htaccess and Connection.php files
 <FilesMatch "(\.htaccess|Connection\.php|Send_Email\.php)">
