--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 
-Index/Pages/Project_3/GitHub/cscGroep/
+Index/Pages/Project_3/GitHub/cscGroep/\
+## Seeing as it Untracked the Connection.php, you would have to add that one yourself
+
 Index/Pages/Project_1/Scripts/Connection.php
 Index/Pages/Project_1/Scripts/Input.php
