--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Index/Pages/Project_3/GitHub/cscGroep/\
 
 Index/Pages/Project_1/Scripts/Connection.php
 Index/Pages/Project_1/Scripts/Input.php
+Index/Pages/Project_3/GitHub/cscGroep
