--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,59 @@
-version: '4.0'
+version: '3.8'
 
 services:
   website:
     image: php:apache
     ports:
-      - 80:80 # http
-      - 443:443 # https
+      - "80:80" # HTTP
+      - "443:443" # HTTPS
     volumes:
       - "./Index:/var/www/html"
   
   DB:
     image: mysql:latest
     ports:
-      - 3306:3306
+      - "3306:3306"
     environment:
-      - MYSQL_DATABASE=Portfolio
+      - MYSQL_DATABASE=Portfolio 
       - MYSQL_USER=PHP_DOCKER
+        ## 
       - MYSQL_PASSWORD=<YOUR_PASSWORD>
-      - MYSQL_ALLOW_EMPTY_PASSWORD=1 ## Only for localhost
+        ## Great for localhost, bad for actual website
+      - MYSQL_ALLOW_EMPTY_PASSWORD=1
     volumes:
       - "./Database:/docker-entrypoint-initdb.d"
 
   PHP_myadmin:
-    image: phpmyadmin/phpmyadmin
+    image: phpmyadmin/phpmyadmin:latest
     environment:
       - PMA_HOST=DB
       - PMA_PORT=3306
 
-  
+  Minecraft:
+    image: itzg/minecraft-server:latest
+    environment:
+      - EULA=true
+    ports:
+      - "25565:25575"
+    volumes:
+      - data:/data
+    stdin_open: true
+    tty: true
+    restart: unless-stopped
+
+  Uptime-Kuma:
+    image: louislam/uptime-kuma:latest
+    ports:
+      - "3001:3001" 
+    volumes:
+      - uptime-kuma:/app/Database
+    restart: always
+
+
+
+
+
+
+volumes:
+  data: {}
+  uptime-kuma: {}
