--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,34 @@
 version: '3.8'
 
 services:
-  website:
+  portfolio:
     image: php:apache
     ports:
-      - "80:80" # HTTP
-      - "443:443" # HTTPS
+      - "8080:80"
     volumes:
-      - /etc/apache2:/etc/apache2 # Mount Apache config from host to container
-      - /path/to/website:/var/www/html # Mount website files
+      - ${HOME}/.Portfolio:/var/www/html
+    command: ["/bin/bash", "-c", "a2enmod rewrite && apache2-foreground"]
+    restart: unless-stopped
 
-  DB:
+  opleiding_blok_b:
+    image: php:apache
+    ports:
+      - "8081:80"
+    volumes:
+      - ${HOME}/.Block_B:/var/www/html/
+    command: ["/bin/bash", "-c", "a2enmod rewrite && apache2-foreground"]
+    restart: unless-stopped
+
+  opleiding_blok_c:
+    image: php:apache
+    ports:
+      - "8082:80"
+    volumes:
+      - ${HOME}/.Block_C:/var/www/html/
+    command: ["/bin/bash", "-c", "a2enmod rewrite && apache2-foreground"]
+    restart: unless-stopped
+
+  db:
     image: mysql:latest
     ports:  
       - "3306:3306"
@@ -20,16 +38,17 @@ services:
       - MYSQL_PASSWORD=<YOUR_PASSWORD>
       - MYSQL_ALLOW_EMPTY_PASSWORD=1
     volumes:
-      - /path/to/mysql/config:/etc/mysql   # Mount MySQL config
-      - /path/to/mysql/data:/var/lib/mysql # Mount MySQL data
+      - ${HOME}/.mysql:/var/lib/mysql # Mount MySQL data
+    restart: unless-stopped
 
-  PHP_myadmin:
+  phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
     environment:
-      - PMA_HOST=DB
-      - PMA_PORT=3306
+      - MYSQL_HOST=db
+      - MYSQL_PORT=3306
+    restart: unless-stopped
 
-  Minecraft:
+  minecraft:
     image: itzg/minecraft-server
     tty: true
     stdin_open: true
@@ -39,12 +58,12 @@ services:
       EULA: "TRUE"
     restart: unless-stopped
     volumes:
-      - ./Minecraft:/data
+      - ${HOME}/.Minecraft:/data
 
-  Uptime-Kuma:
+  uptime-kuma:
     image: louislam/uptime-kuma:latest
     ports:
       - "3001:3001" 
     volumes:
-      - ./uptime-kuma:/app/Database
+      - ${HOME}/.uptime-kuma:/app/Database
     restart: always
