--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
         && docker-php-ext-install pdo_mysql \
         && apache2-foreground
     restart: unless-stopped
+    depends_on:
+      - db
 
   opleiding_blok_b:
     image: php:apache
@@ -77,3 +79,5 @@ services:
     volumes:
       - ${HOME}/.uptime-kuma:/app/Database
     restart: always
+    depends_on:
+      - portfolio
