--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+     MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
     volumes:
       - ${HOME_DIR} /.mysql_data:/var/lib/mysql
 
