--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,15 @@
-
-# Made in my first year of college.
+# Made year one of college.
 
 version: '3.8'
 
-networks:
-  frontend:
-    external: true
-  backend:
-    external: true
-
 services:
-  # CloudFlare:
-  #   container_name: CloudflareTunnel   
-  #   image: cloudflare/cloudflared:latest
-  #   restart: always
-  #   environment:
-  #     - TUNNEL_TOKEN=$TUNNEL_TOKEN
-  #   command: tunnel run
-  #   networks:
-  #     - frontend
-  #     - backend
-
   portfolio:
     container_name: Portfolio
     image: php:apache
     ports:
       - "8080:80"
     volumes:
-      - ${HOME_DIR}/.Portfolio:/var/www/html
+      - ../.Portfolio:/var/www/html
     command: 
       - "/bin/bash"
       - "-c"
@@ -39,13 +21,14 @@ services:
     depends_on:
       - mysql
 
+
   opleiding_blok_b:
     container_name: Blok_B
     image: php:apache
     ports:
       - "8081:80"
     volumes:
-      - ${HOME_DIR}/.Block_B:/var/www/html/
+      - ../.Block_B:/var/www/html/
     command: 
       - "/bin/bash"
       - "-c"
@@ -55,13 +38,14 @@ services:
         && apache2-foreground    
     restart: unless-stopped
 
+
   opleiding_blok_c:
     container_name: Blok_C
     image: php:apache
     ports:
       - "8082:80"
     volumes:
-      - ${HOME_DIR}/.Block_C:/var/www/html/
+      - ../.Block_C:/var/www/html/
     command: 
       - "/bin/bash"
       - "-c"
@@ -70,6 +54,7 @@ services:
         && docker-php-ext-install pdo_mysql \
         && apache2-foreground    
     restart: unless-stopped
+
 
   mysql:
     container_name: Database
@@ -80,7 +65,7 @@ services:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
     volumes:
-      - ${HOME_DIR}/.mysql_data:/var/lib/mysql
+      - ../.mysql_data:/var/lib/mysql
 
   phpmyadmin:
     container_name: PHPMyAdmin
@@ -90,6 +75,7 @@ services:
     depends_on:
       - mysql
     restart: unless-stopped
+
 
   minecraft:
     container_name: Minecraft
@@ -102,7 +88,7 @@ services:
       EULA: "TRUE"
     restart: unless-stopped
     volumes:
-      - ${HOME_DIR}/.Minecraft:/data
+      - ../.Minecraft:/data
 
   uptime-kuma:
     container_name: kuma
@@ -110,7 +96,8 @@ services:
     ports:
       - "3001:3001" 
     volumes:
-      - ${HOME_DIR}/.uptime-kuma:/app/Database
+      - ../.uptime-kuma:/app/Database
     restart: always
     depends_on:
       - portfolio
+
