--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# Made year one of college.
-
 version: '3.8'
 
 services:
@@ -21,7 +19,6 @@ services:
     depends_on:
       - mysql
 
-
   opleiding_blok_b:
     container_name: Blok_B
     image: php:apache
@@ -37,7 +34,6 @@ services:
         && docker-php-ext-install pdo_mysql \
         && apache2-foreground    
     restart: unless-stopped
-
 
   opleiding_blok_c:
     container_name: Blok_C
@@ -55,22 +51,34 @@ services:
         && apache2-foreground    
     restart: unless-stopped
 
-
   mysql:
     container_name: Database
     image: mysql:latest
-    command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
       MYSQL_ROOT_HOST: '%'
     volumes:
       - ./.mysql_data:/var/lib/mysql
-      - ./sql-files/Project_1.sql:/docker-entrypoint-initdb.d/Project_1.sql:ro
-      - ./sql-files/Project_2.sql:/docker-entrypoint-initdb.d/Project_2.sql:ro
+      - ./sql-files:/docker-entrypoint-initdb.d
+    ports:
+      - "3306:3306"
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1"]
+      retries: 20
+      timeout: 10s
 
 
-
+  initialize_db:
+    container_name: Database_Initializer
+    image: mysql:latest
+    depends_on:
+      - mysql
+    volumes:
+      - /home/orangepi/.sql-files/Project_1.sql:/Project_1.sql
+      - /home/orangepi/.sql-files/Project_2.sql:/Project_2.sql
+    entrypoint: /bin/sh
+    command: -c "sleep 10 && cat /Project_1.sql | mysql -h mysql -u root && cat /Project_2.sql | mysql -h mysql -u root"
 
   phpmyadmin:
     container_name: PHPMyAdmin
@@ -80,7 +88,6 @@ services:
     depends_on:
       - mysql
     restart: unless-stopped
-
 
   minecraft:
     container_name: Minecraft
@@ -105,3 +112,6 @@ services:
     restart: always
     depends_on:
       - portfolio
+
+volumes:
+  mysql_data_volume:
