--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -10,5 +10,66 @@ jobs:
   build_and_test:
     runs-on: ubuntu-latest
     steps:
-      - name: Check-out
-        uses: actions/checkout@v2
+      # Checkout the repository
+      - uses: actions/checkout@v2
+
+      # Set up Node.js environment
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 'latest' # Use the latest version of Node.js
+
+      # Install Node.js dependencies
+      - run: npm install
+
+      # Run frontend tests
+      - run: npm test
+
+      # Build frontend assets
+      - run: npm run build
+
+      # Set up PHP environment
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 'latest' # Use the latest version of PHP
+
+      # Install PHP dependencies
+      - run: composer install
+
+      # Run backend tests
+      - run: composer test
+
+      # Run integration tests (assuming PHPUnit for PHP and Jest for JavaScript)
+      - run: ./vendor/bin/phpunit tests/Integration
+      - run: jest --config jest.integration.config.js
+
+      # Set up test database (assuming MySQL)
+      - name: Set up test database
+        run: |
+          mysql -e 'CREATE DATABASE IF NOT EXISTS test_database;'
+          mysql -e 'USE test_database; CREATE TABLE IF NOT EXISTS example_table (id INT AUTO_INCREMENT PRIMARY KEY, name VARCHAR(255));'
+      
+      # Run database tests
+      - run: ./vendor/bin/phpunit tests/Database
+      
+      # Security testing (assuming you have security scanners)
+      - name: Run security scans
+        run: |
+          # Example: Run OWASP Dependency-Check for vulnerabilities in dependencies
+          # Replace with appropriate security scanning tools
+          # Example command: dependency-check --scan /path/to/project --format ALL --out /path/to/output
+          echo "Run security scans here..."
+
+      # Performance testing (assuming Apache JMeter)
+      - name: Run performance tests
+        run: |
+          # Example: Run Apache JMeter for load testing
+          # Replace with appropriate performance testing tools and configurations
+          # Example command: jmeter -n -t /path/to/testplan.jmx -l /path/to/results.jtl
+          echo "Run performance tests here..."
+
+      # Build with PHP (if applicable)
+      - run: composer build
+
+      # Deploy with PHP (if applicable)
+      - run: composer deploy
