--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -16,7 +16,7 @@ jobs:
       # Set up Node.js environment
       - uses: actions/setup-node@v2
         with:
-          node-version: 'latest' # Use the latest version of Node.js
+          node-version:  # Use the latest version of Node.js
 
       # Install Node.js dependencies
       - run: npm install
@@ -31,7 +31,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 'latest' # Use the latest version of PHP
+          php-version:  # Use the latest version of PHP
 
       # Install PHP dependencies
       - run: composer install
