--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -1,6 +1,6 @@
 name: Test
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   test:
@@ -15,6 +15,12 @@ jobs:
       with:
         php-version: '8.0'
         
+    - name: Install PHP dependencies
+      run: composer install
+      
+    - name: Run PHPUnit tests
+      run: vendor/bin/phpunit
+      
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
