--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 # Now you only have to update it with the right credentials, be aware, also after you uninstall it.
 Index/Pages/Project_3/GitHub/cscGroep
 temp..json
+*.secret
