--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,30 @@
 version: '3.8'
 
+networks:
+  frontend: 
+    external: true
+  backend:
+    external: true
+
 services:
+  cloudflare-tunnel:
+    container_name: Tunnel-DO-NOT-DELETE
+    image: cloudflare/cloudflared:latest
+    restart: always
+    environment:
+      - TUNNEL_TOKEN=${TUNNEL_TOKEN}
+    command: tunnel --no-autoupdate run
+    networks:
+      - frontend
+      - backend
+    ports:
+      - "1234:1234"  # Example port mapping for external access
+
   portfolio:
     container_name: Portfolio
     image: php:apache
     ports:
-      - "8080:80"
+      - "8080:80"  # Example port mapping for external access
     volumes:
       - ./.Portfolio:/var/www/html
     command: 
@@ -18,12 +37,15 @@ services:
     restart: unless-stopped
     depends_on:
       - mysql
+    networks:
+      - frontend
+      - backend
 
   opleiding_blok_b:
     container_name: Blok_B
     image: php:apache
     ports:
-      - "8081:80"
+      - "8081:80"  # Example port mapping for external access
     volumes:
       - ./.Block_B:/var/www/html/
     command: 
@@ -34,12 +56,15 @@ services:
         && docker-php-ext-install pdo_mysql \
         && apache2-foreground    
     restart: unless-stopped
+    networks:
+      - frontend
+      - backend
 
   opleiding_blok_c:
     container_name: Blok_C
     image: php:apache
     ports:
-      - "8082:80"
+      - "8082:80"  # Example port mapping for external access
     volumes:
       - ./.Block_C:/var/www/html/
     command: 
@@ -50,28 +75,36 @@ services:
         && docker-php-ext-install pdo_mysql \
         && apache2-foreground    
     restart: unless-stopped
+    networks:
+      - frontend
+      - backend
 
   mysql:
     container_name: Database
     image: mysql:latest
     restart: unless-stopped
     environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
+      MYSQL_ALLOW_EMPTY_PASSWORD: ${MYSQL_ALLOW_EMPTY_PASSWORD}
       MYSQL_ROOT_HOST: '%'
     volumes:
       - ./.mysql_data:/var/lib/mysql
       - ./sql-files:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
+    networks:
+      - backend
 
   phpmyadmin:
     container_name: PHPMyAdmin
     image: phpmyadmin
     ports:
-      - 8070:80
+      - 8070:80  # Example port mapping for external access
     depends_on:
       - mysql
     restart: unless-stopped
+    networks:
+      - frontend
+      - backend
 
   minecraft:
     container_name: Minecraft
@@ -79,7 +112,7 @@ services:
     tty: true
     stdin_open: true
     ports:
-      - "25565:25565"
+      - "25565:25565"  # Example port mapping for external access
     environment:
       EULA: "TRUE"
     restart: unless-stopped
@@ -90,27 +123,29 @@ services:
     container_name: kuma
     image: louislam/uptime-kuma:latest
     ports:
-      - "3001:3001" 
+      - "3001:3001"   # Example port mapping for external access
     volumes:
       - ./.uptime-kuma:/app/Database
     restart: always
     depends_on:
       - portfolio
+    networks:
+      - frontend
+      - backend
 
-## Turn docker run commands into compose commands
   dockge:
     container_name: dockge
     image: louislam/dockge:1
     restart: unless-stopped
     ports:
-      - 5001:5001
+      - 5001:5001   # Example port mapping for external access
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./data:/app/data
       - /home/orangepi:/home/orangepi
     environment:
       - DOCKGE_STACKS_DIR=/home/orangepi
-      
-
-volumes:
-  mysql_data_volume:
+    networks:
+      - frontend
+      - backend
+    
