--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   cloudflared:
     image: cloudflare/cloudflared:latest
     container_name: cloudflared
-    command: tunnel --no-autoupdate run --token ${TUNNEL_TOKEN}
-    networks:
-      - tunnel
+    command: tunnel --no-autoupdate run
+    environment:
+      - TUNNEL_TOKEN=$TUNNEL_TOKEN
     restart: unless-stopped
 
   portfolio:
@@ -26,9 +26,7 @@ services:
     restart: unless-stopped
     depends_on:
       - mysql
-    networks:
-      - tunnel
-
+    
   opleiding_blok_b:
     container_name: Blok_B
     image: php:apache
@@ -44,9 +42,7 @@ services:
         && docker-php-ext-install pdo_mysql \
         && apache2-foreground
     restart: unless-stopped
-    networks:
-      - tunnel
-
+    
   opleiding_blok_c:
     container_name: Blok_C
     image: php:apache
@@ -62,9 +58,7 @@ services:
         && docker-php-ext-install pdo_mysql \
         && apache2-foreground
     restart: unless-stopped
-    networks:
-      - tunnel
-
+    
   mysql:
     container_name: Database
     image: mysql:latest
@@ -77,9 +71,7 @@ services:
       - ./sql-files:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
-    networks:
-      - tunnel
-
+    
   phpmyadmin:
     container_name: PHPMyAdmin
     image: phpmyadmin
@@ -88,9 +80,7 @@ services:
     depends_on:
       - mysql
     restart: unless-stopped
-    networks:
-      - tunnel
-
+    
   minecraft:
     container_name: Minecraft
     image: itzg/minecraft-server
@@ -103,9 +93,7 @@ services:
     restart: unless-stopped
     volumes:
       - ./.Minecraft:/data
-    networks:
-      - tunnel
-
+    
   uptime-kuma:
     container_name: kuma
     image: louislam/uptime-kuma:latest
@@ -116,9 +104,7 @@ services:
     restart: always
     depends_on:
       - portfolio
-    networks:
-      - tunnel
-
+    
   dockge:
     container_name: dockge
     image: louislam/dockge:1
@@ -131,9 +117,3 @@ services:
       - /home/orangepi:/home/orangepi
     environment:
       - DOCKGE_STACKS_DIR=/home/orangepi
-    networks:
-      - tunnel
-
-networks:
-  tunnel:
-    external: true
